--- a/src/pages/master-dashboard/makePayment/makePayment.scss
+++ b/src/pages/master-dashboard/makePayment/makePayment.scss
@@ -22,9 +22,20 @@
           justify-content: space-between;
           gap: 10px;
           padding: 8px 20px;
-          border: 1px solid #000;
-          border-radius: 40px;
+          // border: 1px solid #4c4444;
+          box-shadow: 2px 3px 10px 5px rgba(0, 0, 0, 0.1);
+          border-radius: 5px;
+          margin-bottom: 10px;
+          height: 80px;
           width: 100%;
+          background-color: #fff;
+
+          &:hover {
+            background-color: #f5f5f5;
+          }
+
+          // border-radius: 40px;
+      
           p,
           span {
             font-size: 13px;
