--- a/src/pages/master-dashboard/account/masterAccount.scss
+++ b/src/pages/master-dashboard/account/masterAccount.scss
@@ -48,8 +48,10 @@
     background-color: #fff;
     padding: 15px;
     .account-tabs {
-      border: 0;
+      // border-bottom: 1px solid #ddd;
+      // border-bottom: none;
       display: flex;
+      justify-content: space-between;
       align-items: center;
       .nav-item {
         margin-right: 10px;
@@ -58,10 +60,14 @@
         }
         .nav-link {
           background: none;
-          border: none;
+          border: 1px solid #191010;
+          border-radius:0 !important;
+          min-width: 100px;
           font-size: 14px;
           color: #000;
-          border-radius: 10px;
+          margin: 10px;
+          // border-radius: 10px;
+          // background-color: #adc2ff;
           &.active {
             background-color: #f26b80;
             color: #fff;
